--- a/tball-pay-sdk/examples/checkout/index.html
+++ b/tball-pay-sdk/examples/checkout/index.html
@@ -26,7 +26,7 @@
   <script src="https://unpkg.com/@solana/web3.js@latest/lib/index.iife.js"></script>
   <script src="https://unpkg.com/bn.js@5.2.1/lib/bn.js"></script>
   <script>window.BN = BN;</script>
-  <script src="../../dist/tball-pay-sdk.umd.js"></script>
+  <script src="tball-pay-sdk.umd.js"></script>
   <script>
     const { PaymentProcessor, PhantomAdapter } = TBallPaySDK;
     const sdk = new PaymentProcessor({ network: 'mainnet-beta' });
