--- a/tballpay-linkbuilder/index.html
+++ b/tballpay-linkbuilder/index.html
@@ -12,7 +12,7 @@
     <p>Create a checkout link you can share with buyers, friends, or fans.</p>
 
     <form id="builderForm">
-      <label for="label">Item Name:</label>
+      <label for="label">Item Name/Reason:</label>
       <input type="text" id="label" placeholder="e.g. TBALL Hat" required />
 
       <label for="amount">Amount (TBALL):</label>
