add button generator

--- a/tballpay-linkbuilder/index.html
+++ b/tballpay-linkbuilder/index.html
@@ -30,6 +30,13 @@
       <button id="copyButton">Copy to Clipboard</button>
     </div>
 
+    <div id="buttonEmbed" class="hidden">
+      <h2>🧩 Embed Checkout Button</h2>
+      <p>Paste this HTML where you want the payment button to appear:</p>
+      <textarea id="buttonCode" rows="5" readonly></textarea>
+      <button id="copyEmbed">Copy Embed Code</button>
+    </div>
+
     <footer>
       <p><a href="https://github.com/your-org/tball-pay-sdk" target="_blank">View SDK on GitHub</a></p>
     </footer>
