github link redirect

--- a/tballpay-linkbuilder/index.html
+++ b/tballpay-linkbuilder/index.html
@@ -54,7 +54,7 @@
     </section>
 
     <footer>
-      <p><a href="https://github.com/your-org/tball-pay-sdk" target="_blank">View SDK on GitHub</a></p>
+      <p><a href="#" target="_blank">View SDK on GitHub</a></p>
     </footer>
   </div>
 
