--- a/nyxpay-linkbuilder/index.html
+++ b/nyxpay-linkbuilder/index.html
@@ -3,19 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>TBALL Pay – Link Builder</title>
+  <title>nyxpay Pay – Link Builder</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <div class="container">
-    <h1>🏐 TBALL Pay Link Builder</h1>
+    <h1>🏐 nyxpay Pay Link Builder</h1>
     <p>Create a checkout link you can share with buyers, friends, or fans.</p>
 
     <form id="builderForm">
       <label for="label">Item Name/Reason:</label>
-      <input type="text" id="label" placeholder="e.g. TBALL Hat" required />
+      <input type="text" id="label" placeholder="e.g. nyxpay Hat" required />
 
-      <label for="amount">Amount (TBALL):</label>
+      <label for="amount">Amount (nyxpay):</label>
       <input type="number" id="amount" placeholder="e.g. 25" required min="0.01" step="0.01"/>
 
       <label for="recipient">Recipient Wallet:</label>
@@ -41,8 +41,8 @@
 
     <section id="about" style="margin-top: 3rem;">
         <section id="about" style="margin-top: 3rem;">
-            <h2>📖 About TBALL Pay</h2>
-            <p>TBALL Pay is a fully client side utility for generating Solana payment links and HTML buttons. No servers, no databases, no external requests. Just static JavaScript running in the browser.</p>
+            <h2>📖 About nyxpay Pay</h2>
+            <p>nyxpay Pay is a fully client side utility for generating Solana payment links and HTML buttons. No servers, no databases, no external requests. Just static JavaScript running in the browser.</p>
           
             <p>The builder is deterministic and portable. It can be self hosted, or deployed via IPFS, GitHub Pages, or even from local files. Inputs are encoded into URLs or anchors. nothing is stored or transmitted.</p>
           
