punctuation on link builder index.html UPDATE

--- a/nyxpay-linkbuilder/index.html
+++ b/nyxpay-linkbuilder/index.html
@@ -54,7 +54,7 @@
         </p>
       
         <p>
-          Two files — <code>index.html</code> and <code>script.js</code>.  
+          Two files <code>index.html</code> and <code>script.js</code>.  
           That’s all it takes. No servers. No setup. No one to block or ban you.
         </p>
       
