updated link builder index html

--- a/nyxpay-linkbuilder/index.html
+++ b/nyxpay-linkbuilder/index.html
@@ -79,7 +79,7 @@
       
         <p>
           This is not a service. It’s code. It’s yours.  
-          If you need permission to get paid, go cry to Stripe.
+          If you need permission or support to get paid, go cry to Stripe.
         </p>
       </section>
       
