--- a/nyxpay-linkbuilder/index.html
+++ b/nyxpay-linkbuilder/index.html
@@ -41,7 +41,7 @@
 
     ```html
     <section id="about" style="margin-top: 3rem;">
-      <h2>🧱 About NyxPay</h2>
+      <h2> About NyxPay</h2>
     
       <p>
         NyxPay is not a service. It is a peer to peer payment protocol that fits inside a static HTML file.
